Fix bug with serializing some unicode code points

QDomDocument::createTextNode() ends up calling fixedCharData() which
uses QXmlUtils::isChar(). WHen serializing code points with surrogates,
the high surrogate character was getting dropped after Tellico 3.4.3
started using QDomImplementation::DropInvalidChars.

Saving a collection with these characters, like emojis, with Tellico
3.4.3 will silently lose data.

BUG: 449244
FIXED-IN: 3.4.4